Refactor Printer.java used string format v2 13.03.24 10:33 Zhoholiev